# a-share-trend-watchlist

./: .gitignore  DISCLAIMER.md  GITHUB_PUBLISH.md  GITHUB_README_DRAFT.md  LAUNCH_CHECKLIST.md  MONETIZATION.md  README.md  SALES_COPY.md  SERVICE_PAGE.html  pyproject.toml  requirements-akshare.txt  requirements.txt  setup.py
outputs/: trend_watchlist_2026.xlsx  watchlist_report.xlsx  watchlist_report_akshare.xlsx  watchlist_report_akshare_eastmoney.xlsx  watchlist_report_legacy.xlsx  watchlist_report_split.xlsx
sample_data/: daily_bars.csv  daily_prices.csv  generate_sample_data.py  securities.csv
scripts/: build_trend_watchlist.py
src/a_share_watchlist/: __init__.py  cli.py  compliance.py  config.py  data_loader.py  providers.py  report.py  schema.py  screener.py  trend_report.py
tests/: test_compliance.py  test_screener.py
